--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Jest Pact example",
   "main": "client/index.js",
+  "config": {
+    "pact_do_not_track": true
+  },
   "scripts": {
-    "test:client": "jest client/index.spec.js --setupFiles ./pactSetup.js --setupTestFrameworkScriptFile ./pactTestWrapper.js ",
+    "test:client": "jest client/index.spec.js --setupFiles ./pactSetup.js --setupFilesAfterEnv ./pactTestWrapper.js ",
     "pact:publish": "node ./publish.js",
     "test:server": "node server/verifyPacts.js"
   },
@@ -13,11 +16,11 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^7.0.4",
-    "jest": "^23.6.0"
+    "@pact-foundation/pact": "9.9.3",
+    "jest": "25.3.0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "express": "^4.16.4"
+    "axios": "0.19.2",
+    "express": "4.17.1"
   }
 }
